# Flocking_Cuda

./: .gitignore  .gitmodules  CMakeLists.txt  Flocking_project.sln  Flocking_project.vcxproj  README.md  glad.c  main.cpp
cudaSource/: CMakeLists.txt  README.md  flock.cu  flock_better.cu  flock_better.cuh  main.cpp  parra.txt  testNaiveCuda.sh  testSmartCuda.sh  testing.sh  testing2.sh
glad/: glad.h
libraries/OpenSceneGraph-3.6.5/include/osg/: Drawable
libraries/glad/include/glad/: glad.h
libraries/glad/src/: glad.c
models/: roudie_boi.dae  roundie_boi.osg  roundie_boi.osgb  roundie_boi.osgt
source/: Visualization.cpp  Visualization.h  boid.cpp  boid.h  flock.cpp  flock.h  flock_win.cpp  flock_win.h  main.cpp  shader.h  vec2d.h
